# curve25519-dalek

./: .gitattributes  .gitignore  .travis.yml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  REAME.md  bacon.toml  build.rs  config.sh  cuda_config.sh  functions_to_track.csv  katex-header.html  rust-toolchain  rustdoc-include-katex-header.html  test_naf.rb
benchmarks/: Cargo.toml
benchmarks/benches/: dalek_benchmarks.rs
curve25519-cuda/: Cargo.toml  build.rs
curve25519-cuda/benches/: msm.rs
curve25519-cuda/src/: lib.rs  tests.rs
curve25519-dalek/: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  ecdlp_perf.md  edwards.rs
curve25519-dalek-derive/: Cargo.toml  README.md
curve25519-dalek-derive/src/: lib.rs
curve25519-dalek-derive/tests/: tests.rs
curve25519-dalek/benches/: dalek_benchmarks.rs  ecdlp.rs
curve25519-dalek/docs/: ifma-notes.md  parallel-formulas.md
curve25519-dalek/examples/: ecdlp.rs
curve25519-dalek/proptest-regressions/backend/serial/u64/: scalar.txt
curve25519-dalek/src/: backend.rs  common_verus.rs  constants.rs  core_assumes.rs  curve_specs.rs  diagnostics.rs  ecdlp.rs  ed25519.rs  edwards.rs  elligator2.rs  encodable_curve.rs  ff_field.rs  field.rs  field_specs.rs  hazmat.rs  heea.rs  lib.rs  lizard.rs  macros.rs  montgomery.rs  ristretto.rs  scalar.rs  scalar_helpers.rs  scalar_specs.rs  scalar_verus.rs  serde_assumes.rs  short_weierstrass.rs  traits.rs  window.rs
curve25519-dalek/src/backend/: mod.rs  serial.rs  vector.rs
curve25519-dalek/src/backend/serial/: curve_models.rs  fiat_u32.rs  fiat_u64.rs  mod.rs  scalar_mul.rs  u64.rs
curve25519-dalek/src/backend/serial/curve_models/: mod.rs
curve25519-dalek/src/backend/serial/fiat_u32/: field.rs  mod.rs
curve25519-dalek/src/backend/serial/fiat_u64/: field.rs  mod.rs
curve25519-dalek/src/backend/serial/scalar_mul/: abglsv_pornin.rs  mod.rs  pippenger.rs  precomputed_straus.rs  scalar_mul_tests.rs  straus.rs  variable_base.rs  vartime_double_base.rs  vartime_triple_base.rs
curve25519-dalek/src/backend/serial/u32/: constants.rs  field.rs  mod.rs  scalar.rs  wide_scalar.rs
curve25519-dalek/src/backend/serial/u32e/: constants.rs  field.rs  mod.rs  scalar.rs
curve25519-dalek/src/backend/serial/u64/: backend_64_core.rs  bounds.rs  choice_spec.rs  common_verus.rs  constants.rs  core_lemmas.rs  field.rs  field_lemmas.rs  field_verus.rs  (+14 more)
curve25519-dalek/src/backend/vector/: avx2.rs  ifma.rs  mod.rs  packed_simd.rs  scalar_mul.rs
curve25519-dalek/src/ecdlp/: affine_montgomery.rs  mod.rs  table.rs
curve25519-dalek/src/edwards/: affine.rs
curve25519-dalek/src/elligator2/: compatibility.rs  legacy.rs  randomness.rs  rfc9380.rs  subgroup.rs
curve25519-dalek/src/ff_field/: lazy_field.rs  lazy_field25519.rs
curve25519-dalek/src/hazmat/: lazy_field.rs  lazy_field25519.rs
curve25519-dalek/src/hazmat/lazy_field/: eager.rs
curve25519-dalek/src/lemmas/: core_lemmas.rs  mod.rs  montgomery_curve_lemmas.rs  montgomery_lemmas.rs  montgomery_pow_chain_lemmas.rs  scalar_batch_invert_lemmas.rs  scalar_lemmas.rs  scalar_lemmas_extra.rs  scalar_montgomery_lemmas.rs
curve25519-dalek/src/lemmas/common_lemmas/: bit_lemmas.rs  bits_as_nat_lemmas.rs  div_mod_lemmas.rs  mask_lemmas.rs  mod.rs  mul_lemmas.rs  number_theory_lemmas.rs  pow_lemmas.rs  shift_lemmas.rs  sum_lemmas.rs  to_nat_lemmas.rs
curve25519-dalek/src/lemmas/edwards_lemmas/: constants_lemmas.rs  curve_equation_lemmas.rs  decompress_lemmas.rs  mod.rs  mul_base_lemmas.rs  niels_addition_correctness.rs  pippenger_lemmas.rs  step1_lemmas.rs  straus_lemmas.rs  vartime_double_base_lemmas.rs
curve25519-dalek/src/lemmas/field_lemmas/: add_lemmas.rs  as_bytes_lemmas.rs  as_nat_lemmas.rs  batch_invert_lemmas.rs  compute_q_lemmas.rs  constants_lemmas.rs  field_algebra_lemmas.rs  from_bytes_lemmas.rs  invert_lemmas.rs  limbs_to_bytes_lemmas.rs  load8_lemmas.rs  mod.rs  mul_lemmas.rs  negate_lemmas.rs  pow22501_t19_lemma.rs  pow22501_t3_lemma.rs  pow2_51_lemmas.rs  pow2k_lemmas.rs  pow_chain_lemmas.rs  pow_p58_lemma.rs  reduce_lemmas.rs  sqrt_m1_lemmas.rs  sqrt_ratio_lemmas.rs  to_bytes_reduction_lemmas.rs  u64_5_as_nat_lemmas.rs  u8_32_as_nat_injectivity_lemmas.rs  unused_helper_lemmas.rs
curve25519-dalek/src/lemmas/ristretto_lemmas/: axioms.rs  batch_compress_lemmas.rs  elligator_lemmas.rs  mod.rs
curve25519-dalek/src/lemmas/scalar_byte_lemmas/: bytes_to_scalar_lemmas.rs  mod.rs  scalar_to_bytes_lemmas.rs
curve25519-dalek/src/lemmas/scalar_lemmas_/: mod.rs  montgomery_reduce_lemmas.rs  montgomery_reduce_part1_chain_lemmas.rs  montgomery_reduce_part2_chain_lemmas.rs  naf_lemmas.rs  radix16_lemmas.rs  radix_2w_lemmas.rs
curve25519-dalek/src/lizard/: LICENSE  README.md  jacobi_quartic.rs  lizard_constants.rs  lizard_ristretto.rs  mod.rs  u32_constants.rs  u64_constants.rs
curve25519-dalek/src/ristretto/: elligator.rs
curve25519-dalek/src/scalar/: heea.rs  lattice_reduction.rs
curve25519-dalek/src/specs/: arithm_trait_specs.rs  core_specs.rs  curve_specs.rs  edwards_specs.rs  field_specs.rs  field_specs_u64.rs  iterator_specs.rs  lizard_specs.rs  mod.rs  montgomery_reduce_specs.rs  montgomery_specs.rs  mul_specs.rs  primality_specs.rs  proba_specs.rs  ristretto_specs.rs  scalar52_specs.rs  scalar_mul_specs.rs  scalar_specs.rs  scalar_specs_u64.rs  window_specs.rs
curve25519-dalek/tests/: build_tests.sh
ed25519-dalek/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  VALIDATIONVECTORS
ed25519-dalek/benches/: ed25519_benchmarks.rs
ed25519-dalek/src/: batch.rs  context.rs  errors.rs  hazmat.rs  lib.rs  signature.rs  signing.rs  verifying.rs
ed25519-dalek/src/batch/: strobe.rs  transcript.rs
ed25519-dalek/src/verifying/: stream.rs
ed25519-dalek/tests/: ed25519.rs  pkcs8.rs  validation_criteria.rs  x25519.rs
x25519-dalek/: .gitignore  CHANGELOG.md  Cargo.toml  README.md
x25519-dalek/.github/workflows/: rust.yml
x25519-dalek/benches/: x25519.rs
x25519-dalek/src/: lib.rs  x25519.rs
x25519-dalek/tests/: x25519_tests.rs
(+337 files in other folders)
