[workspace]
members = [
    "curve25519-dalek",
    "curve25519-dalek-derive",
    "ed25519-dalek", "wycheproofs/generate-wycheproofs", "wycheproofs/wycheproof-ed25519-dalek",
    "x25519-dalek"
]
resolver = "2"

[profile.dev]
opt-level = 2

[patch.crates-io]
curve25519-dalek-derive = { path = "./curve25519-dalek-derive" }
curve25519-dalek = { path = "./curve25519-dalek" }
x25519-dalek = { path = "./x25519-dalek" }
