[package]
name    = "dalek_benchmarks"
version = "0.0.0"
authors = ["Isis Lovecruft <isis@patternsinthevoid.net>",
           "Henry de Valence <hdevalence@hdevalence.ca>"]
edition = "2018"

[dependencies]
criterion = "0.2"
curve25519-dalek = { path = ".." }
rand = "0.6"

[[bench]]
name = "dalek_benchmarks"
harness = false

[lib]
path = ".dummy.rs"
