[package]
name = "curve25519-dalek-derive"
version = "0.1.0"
edition = "2021"

repository = "https://github.com/dalek-cryptography/curve25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/curve25519-dalek-derive"
license = "MIT/Apache-2.0"
readme = "README.md"
description = "curve25519-dalek Derives"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.53"
quote = "1.0.26"
syn = { version = "2.0.8", features = ["full"] }
