[package]
name = "curve25519-dalek"
# Before incrementing:
# - update CHANGELOG
# - update README if required by semver
# - if README was updated, also update module documentation in src/lib.rs
version = "5.0.0-pre.3"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Isis Lovecruft <isis@patternsinthevoid.net>",
    "Henry de Valence <hdevalence@hdevalence.ca>",
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek/tree/main/curve25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/curve25519-dalek"
categories = ["cryptography", "no-std"]
keywords = ["cryptography", "crypto", "ristretto", "curve25519", "ristretto255"]
description = "A pure-Rust implementation of group operations on ristretto255 and Curve25519"
exclude = ["**/.gitignore", ".gitignore"]

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "docs/assets/rustdoc-include-katex-header.html",
    "--cfg",
    "docsrs",
]
all-features = true

[dev-dependencies]
sha2 = { version = "0.11.0-rc.3", default-features = false }
bincode = "1"
criterion = { version = "0.5", features = ["html_reports"] }
hex = "0.4.2"
proptest = "1"
rand = "0.10.0-rc.5"

[build-dependencies]
rustc_version = "0.4.0"

[[bench]]
name = "dalek_benchmarks"
harness = false
required-features = ["alloc", "rand_core"]

[dependencies]
cfg-if = "1"
ff = { version = "=0.14.0-pre.0", package = "rustcrypto-ff", default-features = false, optional = true }
group = { version = "=0.14.0-pre.0", package = "rustcrypto-group", default-features = false, optional = true }
rand_core = { version = "0.10.0-rc-2", default-features = false, optional = true }
digest = { version = "0.11.0-rc.4", default-features = false, optional = true, features = [
    "block-api",
] }
subtle = { version = "2.6.0", default-features = false, features = [
    "const-generics",
] }
serde = { version = "1.0", default-features = false, optional = true, features = [
    "derive",
] }
zeroize = { version = "1", default-features = false, optional = true }

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = "0.2.17"

[target.'cfg(curve25519_dalek_backend = "fiat")'.dependencies]
fiat-crypto = { version = "0.3.0", default-features = false }

[features]
default = ["alloc", "precomputed-tables", "zeroize"]
alloc = ["zeroize?/alloc"]
precomputed-tables = []
legacy_compatibility = []
group = ["dep:group", "rand_core"]
group-bits = ["group", "ff/bits"]
digest = ["dep:digest"]
lizard = ["digest"]

[target.'cfg(all(not(curve25519_dalek_backend = "fiat"), not(curve25519_dalek_backend = "serial"), target_arch = "x86_64"))'.dependencies]
curve25519-dalek-derive = "0.1"

[lints.rust.unexpected_cfgs]
level = "warn"
check-cfg = [
    'cfg(allow_unused_unsafe)',
    'cfg(curve25519_dalek_backend, values("fiat", "serial", "simd", "unstable_avx512"))',
    'cfg(curve25519_dalek_diagnostics, values("build"))',
    'cfg(curve25519_dalek_bits, values("32", "64"))',
    'cfg(nightly)',
]
