[package]
name = "x25519-dalek"
edition = "2024"
# Before changing this:
# - update version in README.md
# - update html_root_url
# - update CHANGELOG
# - if any changes were made to README.md, mirror them in src/lib.rs docs
version = "3.0.0-pre.3"
authors = [
    "Isis Lovecruft <isis@patternsinthevoid.net>",
    "DebugSteven <debugsteven@gmail.com>",
    "Henry de Valence <hdevalence@hdevalence.ca>",
]
readme = "README.md"
license = "BSD-3-Clause"
repository = "https://github.com/dalek-cryptography/curve25519-dalek/tree/main/x25519-dalek"
homepage = "https://github.com/dalek-cryptography/curve25519-dalek"
documentation = "https://docs.rs/x25519-dalek"
categories = ["cryptography", "no-std"]
keywords = [
    "cryptography",
    "curve25519",
    "key-exchange",
    "x25519",
    "diffie-hellman",
]
description = "X25519 elliptic curve Diffie-Hellman key exchange in pure-Rust, using curve25519-dalek."
exclude = [".gitignore", ".travis.yml", "CONTRIBUTING.md"]
rust-version = "1.85"

[badges]
travis-ci = { repository = "dalek-cryptography/x25519-dalek", branch = "master" }

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "docs/assets/rustdoc-include-katex-header.html",
    "--cfg",
    "docsrs",
]
all-features = true

[dependencies]
curve25519-dalek = { version = "=5.0.0-pre.3", default-features = false }
rand_core = { version = "0.10.0-rc-3", default-features = false }

# optional dependencies
getrandom = { version = "0.4.0-rc.0", optional = true }
serde = { version = "1", default-features = false, optional = true, features = ["derive"] }
zeroize = { version = "1", default-features = false, optional = true }

[dev-dependencies]
bincode = "1"
criterion = "0.5"
rand = "0.10.0-rc.5"

[[bench]]
name = "x25519"
harness = false

[features]
default = ["precomputed-tables", "zeroize"]
getrandom = ["dep:getrandom"]
zeroize = ["dep:zeroize", "curve25519-dalek/zeroize"]
serde = ["dep:serde", "curve25519-dalek/serde"]
precomputed-tables = ["curve25519-dalek/precomputed-tables"]
reusable_secrets = []
static_secrets = []
